Fix hamburger menu and overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Sanchez', serif;
     line-height: 1.5;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .hidden {
